full-moon/tests/cases/fail/parser/table-9/source.lua
local x = {
	[a.b.c = 10,
}
